Use PtFileChooser when exporting pdf.  If useFileDialog() returns true, then do not check twice for the existence of the file